[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/House_inside.gd" type="Script" id=1]
[ext_resource path="res://environment/house_iniside.png" type="Texture" id=2]
[ext_resource path="res://utils/white_noise_1.png" type="Texture" id=3]
[ext_resource path="res://utils/white_noise_2.png" type="Texture" id=4]
[ext_resource path="res://utils/white_noise_3.png" type="Texture" id=5]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/InteractPoint.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "white_noise",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 390.221 )

[node name="House_inside" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 319.751, -0.19577 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 223.525, 233.996 )
scale = Vector2( 1.59434, 0.875 )
frames = SubResource( 1 )
animation = "white_noise"
playing = true

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 180, 240 )

[node name="wall" type="StaticBody2D" parent="."]
position = Vector2( -10, 190 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
shape = SubResource( 2 )

[node name="floor" type="StaticBody2D" parent="."]
position = Vector2( 370.271, 265.631 )
rotation = 1.5708
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2( 0.395905, 0 )
shape = SubResource( 2 )

[node name="wall2" type="StaticBody2D" parent="."]
position = Vector2( 640, 190 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall2"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="respawn_from_desk_point" type="Node2D" parent="."]
position = Vector2( 421.636, 241.542 )

[node name="PaintingDialog" parent="." instance=ExtResource( 9 )]
position = Vector2( 531.682, 245.391 )
isDialogInteraction = true
dialogId = "painting"

[node name="fridge_door_interact" parent="." instance=ExtResource( 9 )]
position = Vector2( 48.5874, 243.211 )
isTransitionInteraction = true
transitionScene = "Fridge"

[node name="door_outside_interact" parent="." instance=ExtResource( 9 )]
position = Vector2( 183.779, 245.169 )
isTransitionInteraction = true
transitionScene = "World"

[node name="door_to_basement_interact" parent="." instance=ExtResource( 9 )]
position = Vector2( 301.668, 244.059 )
isTransitionInteraction = true
transitionScene = "Basement"

[node name="mushroom_interact" parent="." instance=ExtResource( 9 )]
position = Vector2( 423.393, 240.738 )
isTransitionInteraction = true
transitionScene = "Desk"
